applications/mlflow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow
  labels:
    kubernetes.io/metadata.name: mlflow
