applications/mlflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
  namespace: mlflow
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: abisoye314/mlflow:v1
          imagePullPolicy: IfNotPresent
          command: ["/bin/bash"]
          args:
            - "-c"
            - "mlflow server --host 0.0.0.0 --default-artifact-root s3://mlflow-artifacts --backend-store-uri postgresql+psycopg2://postgres:UaDYIgKmrfupZrfTuCcNFPzn@postgres-release-postgresql.postgres.svc.cluster.local:5432/postgres"
          # args:
          #   - "-c"
          #   - "mlflow server --host 0.0.0.0 --default-artifact-root s3://mlflow-artifacts --backend-store-uri postgresql+psycopg2://postgres:UaDYIgKmrfupZrfTuCcNFPzn@postgres-release-postgresql.postgres.svc.cluster.local:5432/postgres --static-prefix=/mlflow"
          ports:
            - containerPort: 5000
