applications/mlflow/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: seaweedfs-from-mlflow
  namespace: mlflow
spec:
  host: seaweedfs.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
